# ServiceFabric-PortfolioRisk

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
apps/portfolio-risk-workbench/: analysis_service.py  app.py  data_workspace_service.py  monitoring_service.py  presentation.py  pyproject.toml  risk-package-lock.json  servicefabric-package.json  stage_package.py  workspace_service.py
apps/portfolio-risk-workbench/catalog/: notebooks.yaml  research.yaml
apps/portfolio-risk-workbench/seed/knowledge-products/: KP-02.yaml  (+1 more)
apps/portfolio-risk-workbench/static/: workbench.css
apps/portfolio-risk-workbench/templates/: agent_runs.html  agents.html  alert_detail.html  alerts.html  base.html  components.html  dashboard.html  data.html  data_crosswalks.html  data_dataset.html  data_datasets.html  data_import.html  data_import_preview.html  data_query.html  data_query_manifests.html  error.html  findings.html  monitoring_context.html  monitoring_context_detail.html  monitoring_contexts.html  monitoring_evaluation.html  monitoring_event_import.html  monitoring_event_preview.html  monitoring_event_snapshot.html  monitoring_events.html  monitoring_policies.html  monitoring_policy_detail.html  monitoring_policy_form.html  monitoring_replay.html  monitoring_replay_detail.html  monitoring_report.html  monitoring_run_detail.html  monitoring_run_form.html  monitoring_runs.html  notebooks.html  plan.html  portfolio.html  portfolio_compare.html  portfolio_import.html  portfolio_preview.html  (+7 more)
(+296 files in other folders)
