[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-risk-workbench"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi==0.139.0",
  "Jinja2==3.1.6",
  "python-multipart==0.0.32",
  "risk-analytics==0.1.0",
  "uvicorn==0.51.0",
]
